kube/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
spec:
  rules:
    - host: django.poll.info
      http:
        paths:
          - path: /polls
            pathType: Prefix
            backend:
              service:
                name: django
                port: 
                  number: 8001
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: django
                port: 
                  number: 8001
